Ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-ingress
spec: 
  rules:
  - host: mongo.com
    http:
      paths:
      - backend:
          serviceName: myapp-internal-service
          servicePort: 8080
